# health-check

./: .env.backup  Dockerfile  README.md  claims.db  docker-compose.yml  entrypoint.sh  pyproject.toml  testllmaccess.py
app/: database.py  main.py  models.py  schemas.py
app/api/: endpoints.py
app/services/: graph_flow.py  s3_services.py  textract.py
